**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.19 - SVN
--------------------

Version 1.4.18 - 11 May 2009
----------------------------
  - Fixed port detection in automatic base URL detection scheme
    (get_location()). (#2388423)
  - Added informational type option widget.
  - Added password type option widget.
  - Fixed filters plugin to allow spam filters to scan multiple
    messages, rather than the first message returned. (#1634735)
  - Removed code from spam filters plugin to stop if falling back
    to searching all messages when there was no new messages.
  - Altered filters plugin to issue single move/delete statement
    for multiple messages.
  - Updated some core code, and several plugins, to not use code
    marked as obsolete.
  - Corrected sqimap_msgs_list_copy to actually copy messages,
    rather than move.
  - Created new sqimap_msgs_list_move to move messages.
  - Migrated some fetch handling code from dev branch in plans to
    update some core functionality to allow reusability of code.
  - Make address book file permissions 0600 - same as preference files.
  - Fix for address book nicknames that contain the : character.
  - Ensure that hash directory computation is the same on both 32 and
    64 bit architectures. (#2596879)
  - Allow multiple addresses in one abook entry (separate with commas),
    although we HIGHLY DISCOURAGE grouping in this manner - note amongst
    other issues that can come up, sizing for large groups will be a
    problem. (#2611967)
  - Added Tamil translation (Thanks to Kengatharaiyer Sarveswaran).
  - Added Bengali (Bangladesh) translation (Thanks to Jamil Ahmed).
  - Moved documentation to doc/ directory and added example .htaccess
    files in all directories to which browsers don't need direct access.
  - Date headers in outgoing messages have been brought into RFC 822
    compliance (removed time zone name). (#1849410)